--- a/tex/latex/PalisadesLakes/PalisadesLakes.sty
+++ b/tex/latex/PalisadesLakes/PalisadesLakes.sty
@@ -130,15 +130,28 @@
 %-----------------------------------------------------------------
 %\RequirePackage[T1]{fontenc}
 \RequirePackage[]{fontspec}[2020/02/21]
-\defaultfontfeatures{Scale=MatchLowercase}
+%\defaultfontfeatures{Scale=MatchLowercase}
 %\RequirePackage{yfonts}[2019/04/04]
+%-----------------------------------------------------------------
+% unicode-math
+%-----------------------------------------------------------------
+\RequirePackage[
+math-style=ISO,
+bold-style=ISO,
+sans-style=italic,
+partial=upright,
+nabla=upright,
+]
+{unicode-math}[2020/01/30]
+% \RequirePackage[math-style=ISO,bold-style=ISO,sans-style=upright]{unicode-math}[2020/01/30]
+% \RequirePackage[math-style=TeX]{unicode-math}[2020/01/30]
+% \RequirePackage[math-style=french]{unicode-math}[2020/01/30]
+% \RequirePackage[math-style=upright]{unicode-math}[2020/01/30]
+% \RequirePackage[math-style=literal]{unicode-math}[2020/01/30]
+
 %-----------------------------------------------------------------
 % main font
 %-----------------------------------------------------------------
-
-% XITS fonts are distributed 
-% under the Open Font License, version 1.1.
-% https://github.com/alif-type/xits
 
 % https://www.stixfonts.org/
 % STIX fonts are available for download at 
@@ -167,11 +180,6 @@
 
 %\setmainfont{Garamond}
 
-% https://en.wikipedia.org/wiki/EB_Garamond
-% http://www.georgduffner.at/ebgaramond/download.html
-% https://github.com/octaviopardo/EBGaramond12
-% \setmainfont{EB Garamond}[Numbers={OldStyle,Proportional},RawFeature={+ss06}]
-
 % https://www.microsoft.com/typography/fonts/family.aspx?FID=134
 % \fontspec[
 %  SmallCapsFeatures={Letters=SmallCaps},
@@ -183,10 +191,13 @@
 
 %\setmainfont{texgyrepagella-regular.otf}
 
+%-----------------------------------------------------------------
+% EB Garamond
+%-----------------------------------------------------------------
+% https://en.wikipedia.org/wiki/EB_Garamond
 % http://www.georgduffner.at/ebgaramond/download.html
-% \fontspec[
-%  SmallCapsFeatures={Letters=SmallCaps},
-% ]{EB Garamond}
+% https://github.com/octaviopardo/EBGaramond12
+% \setmainfont{EB Garamond}[Numbers={OldStyle,Proportional},RawFeature={+ss06}]
 
 % original setup with Duffner's files
 % \setmainfont[
@@ -197,81 +208,139 @@
 % BoldItalicFont = *08-Italic ]
 % {EBGaramond}
 
-\RequirePackage[
-math-style=ISO,
-bold-style=ISO,
-sans-style=italic,
-partial=upright,
-nabla=upright,
-]
-{unicode-math}[2020/01/30]
+% see
+% https://tex.stackexchange.com/questions/503117/accessing-the-short-arched-f-in-eb-garamond
+% mentions that original Duffner version has richer feature set;
+% also, I like the look of the original small caps better.
 
-\setmainfont{EB Garamond}
-[
-% RawFeature={
-% % %+aalt, % all characters tiny 
-% % %+c2pc, % all caps petite
-% % %+c2sc, % all caps small
-% % +case, % effect not obvious, re-test
-% % %+dlig, % some weird ligatures
-% % %+frac, % small digits out of position
-% % %+hist, % all s go to f-ish shape
-% % +hlig, % no obvious effect
-% % +kern, % no obvious effect
-% % +liga, % no obvious effect
-% % %+lnum, % all digits same size, rise, drop
-% % %+mark, % no obvious effect
-% % %+mkmk, % no obvious effect
-% % %+onum, % no obvious effect
-% % %+ordn, % no obvious effect
-% % %+pcap, % caps/smallcaps for all
-% % %+pnum, % no obvious effect
-% % %+sinf, % all characters tiny 
-% % %+smcp, % all text csc
-% % %+ss01, % all text csc
-% % %+ss02, % text (not math) parens turn into pointing hands
-% % %+ss03, % no obvious effect,except all digits same
-% % %+ss04, % text (not math) parens turn into flourished leaves
-% % %+ss05, % no obvious effect
-% +ss06, % no obvious effect
-% % %+ss07, % all s go to f-ish shape
-% % %+subs, % all characters tiny
-% % %+sups, % all characters tiny
-% % %+swsh, % page header all swashed, italic caps swashed
-% % %+tnum, % no obvious effect
+% \setmainfont{EB Garamond}
+% [
+% % RawFeature={
+% % % %+aalt, % all characters tiny
+% % % %+c2pc, % all caps petite
+% % % %+c2sc, % all caps small
+% % % +case, % effect not obvious, re-test
+% % % %+dlig, % some weird ligatures
+% % % %+frac, % small digits out of position
+% % % %+hist, % all s go to f-ish shape
+% % % +hlig, % no obvious effect
+% % % +kern, % no obvious effect
+% % % +liga, % no obvious effect
+% % % %+lnum, % all digits same size, rise, drop
+% % % %+mark, % no obvious effect
+% % % %+mkmk, % no obvious effect
+% % % %+onum, % no obvious effect
+% % % %+ordn, % no obvious effect
+% % % %+pcap, % caps/smallcaps for all
+% % % %+pnum, % no obvious effect
+% % % %+sinf, % all characters tiny
+% % % %+smcp, % all text csc
+% % % %+ss01, % all text csc
+% % % %+ss02, % text (not math) parens turn into pointing hands
+% % % %+ss03, % no obvious effect,except all digits same
+% % % %+ss04, % text (not math) parens turn into flourished leaves
+% % % %+ss05, % no obvious effect
+% % +ss06, % no obvious effect
+% % % %+ss07, % all s go to f-ish shape
+% % % %+subs, % all characters tiny
+% % % %+sups, % all characters tiny
+% % % %+swsh, % page header all swashed, italic caps swashed
+% % % %+tnum, % no obvious effect
+% % },
+% %StylisticSet = 1,% all petite caps
+% %StylisticSet = 2,% text parens -> hands
+% %StylisticSet = 3,% ?
+% %StylisticSet = 4,% text parens -> flourish
+% %StylisticSet = 5,% ss -> 'beta'
+% StylisticSet = 6,% log tailed Q
+% %StylisticSet = 7,% jumps -> iumpf
+% FontFace={lb}{n}{Font=* Medium},
+% FontFace={sb}{n}{Font=* SemiBold},
+% FontFace={eb}{n}{Font=* ExtraBold},
+% % no obvious change from no specification
+% %SmallCapsFeatures={Letters=Uppercase},
+% % smallcaps caps smaller than lower case
+% %SmallCapsFeatures={Letters=UppercasePetiteCaps},
+% % smallcaps caps same size as lower case
+% %SmallCapsFeatures={Letters=UppercaseSmallCaps},
+% % increase difference btwn upper and lower case
+% % SmallCapsFeatures={Letters=PetiteCaps},
+% % no obvious change from no specification
+% %SmallCapsFeatures={Letters=SmallCaps},
+% % no obvious change from no specification
+% %SmallCapsFeatures={Letters=Unicase},
+% % very small difference btwn upper and lower case
+% % Cwould still like to have uppercase slightly larger
+% SmallCapsFeatures={
+% Letters={UppercaseSmallCaps,PetiteCaps},
+% Scale=1.5,
+% FakeStretch=0.825,
 % },
-StylisticSet = 6,
-FontFace={lb}{n}{Font=* Medium},
-FontFace={sb}{n}{Font=* SemiBold},
-FontFace={eb}{n}{Font=* ExtraBold},
-% no obvious change from no specification
-%SmallCapsFeatures={Letters=Uppercase},
-% smallcaps caps smaller than lower case
-%SmallCapsFeatures={Letters=UppercasePetiteCaps},
-% smallcaps caps same size as lower case
-%SmallCapsFeatures={Letters=UppercaseSmallCaps},
-% increase difference btwn upper and lower case
-% SmallCapsFeatures={Letters=PetiteCaps},
-% no obvious change from no specification
-%SmallCapsFeatures={Letters=SmallCaps},
-% no obvious change from no specification
-%SmallCapsFeatures={Letters=Unicase},
-% very small difference btwn upper and lower case
-% Cwould still like to have uppercase slightly larger
-SmallCapsFeatures={
-Letters={UppercaseSmallCaps,PetiteCaps},
-Scale=1.5,
-FakeStretch=0.825,
-},
-Numbers={OldStyle,Proportional,SlashedZero},
-% smallcaps a bit more compact than MatchUppercase
-%Scale=MatchLowercase,
-%Scale=MatchUppercase,
+% Numbers={OldStyle,Proportional},
+% % smallcaps a bit more compact than MatchUppercase
+% %Scale=MatchLowercase,
+% %Scale=MatchUppercase,
+% ]
+% 
+%-----------------------------------------------------------------
+% XITS
+%-----------------------------------------------------------------
+% XITS fonts are distributed 
+% under the Open Font License, version 1.1.
+% https://github.com/alif-type/xits
+
+\setmainfont{XITS}
+[
+% % RawFeature={
+% % % %+aalt, % all characters tiny 
+% % % %+c2pc, % all caps petite
+% % % %+c2sc, % all caps small
+% % % +case, % effect not obvious, re-test
+% % % %+dlig, % some weird ligatures
+% % % %+frac, % small digits out of position
+% % % %+hist, % all s go to f-ish shape
+% % % +hlig, % no obvious effect
+% % % +kern, % no obvious effect
+% % % +liga, % no obvious effect
+% % % %+lnum, % all digits same size, rise, drop
+% % % %+mark, % no obvious effect
+% % % %+mkmk, % no obvious effect
+% % % %+onum, % no obvious effect
+% % % %+ordn, % no obvious effect
+% % % %+pcap, % caps/smallcaps for all
+% % % %+pnum, % no obvious effect
+% % % %+sinf, % all characters tiny 
+% % % %+smcp, % all text csc
+% % % %+ss01, % all text csc
+% % % %+ss02, % text (not math) parens turn into pointing hands
+% % % %+ss03, % no obvious effect,except all digits same
+% % % %+ss04, % text (not math) parens turn into flourished leaves
+% % % %+ss05, % no obvious effect
+% % +ss06, % no obvious effect
+% % % %+ss07, % all s go to f-ish shape
+% % % %+subs, % all characters tiny
+% % % %+sups, % all characters tiny
+% % % %+swsh, % page header all swashed, italic caps swashed
+% % % %+tnum, % no obvious effect
+% % },
+%StylisticSet = 11,
+FontFace={lb}{n}{Font=XITS-Regular},
+FontFace={sb}{n}{Font=XITS-Bold},
+FontFace={eb}{n}{Font=XITS-Bold},
+%SmallCapsFeatures={
+% % Letters={UppercaseSmallCaps,PetiteCaps},
+% % Scale=1.5,
+% % FakeStretch=0.825,
+% % },
+%Numbers={OldStyle,Proportional},
 ]
+
+%-----------------------------------------------------------------
+
 \DeclareRobustCommand{\lbseries}{\fontseries{lb}\selectfont}
 \DeclareRobustCommand{\sbseries}{\fontseries{sb}\selectfont}
 \DeclareRobustCommand{\ebseries}{\fontseries{eb}\selectfont}
-\DeclareTextFontCommand{\textlb}{\sbseries}
+\DeclareTextFontCommand{\textlb}{\lbseries}
 \DeclareTextFontCommand{\textsb}{\sbseries}
 \DeclareTextFontCommand{\texteb}{\ebseries}
 
@@ -300,20 +369,6 @@ Numbers={OldStyle,Proportional,SlashedZero},
 %-----------------------------------------------------------------
 % math fonts
 %-----------------------------------------------------------------
-\RequirePackage[
-math-style=ISO,
-bold-style=ISO,
-sans-style=italic,
-partial=upright,
-nabla=upright,
-]
-{unicode-math}[2020/01/30]
-% \RequirePackage[math-style=ISO,bold-style=ISO,sans-style=upright]{unicode-math}[2020/01/30]
-% \RequirePackage[math-style=TeX]{unicode-math}[2020/01/30]
-% \RequirePackage[math-style=french]{unicode-math}[2020/01/30]
-% \RequirePackage[math-style=upright]{unicode-math}[2020/01/30]
-% \RequirePackage[math-style=literal]{unicode-math}[2020/01/30]
-
 %\setmathfont{texgyrepagella-math.otf}
 
 % lots of missing symbols
